2006-05-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp (findFiles): Fix PR#1493706 problem with
	misplaced NULL terminator.

2006-05-23  Craig James <cjames@emolecules.com>

	* src/formats/smilesformat.cpp: Fixed a potential buffer overflow
	when parsing SMILES.

2006-05-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

        * src/formats/inchi/ : Update with InChI 1.01 pre-release.

        * src/formats/inchi_api.h: Ditto.

2006-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (GetMolWt): Make sure to include implicit hydrogens
	when calculating molecular weight and exact mass.

	* src/formats/smilesformat.cpp (SmiToMol): Since SMILES sets
	formal charges, turn off automatic updates.

        * src/chains.h, src/chains.cpp: Initial work on documenting,
        indentation, and general cleanup of chains.cpp.
        (ConstrainBackbone): Check for valence of backbone atoms 
        should actually be for HvyValence() since all hydrogens are ignored.
        Fixes PR#1442779.

2006-04-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.cpp: Fix broken gzip-decoding of input
	(PR#1473243) introduced by 2006-04-11 change. Fix bug when writing
	multi-molecule files using WriteFile() (PR#1474265).

2006-04-16  Chris Morley <ob@gaseq.co.uk>

	* INSTALL.Windows, windows: Updated Windows build files for Visual
	C++ VC6 and VC8 for 2.0.1 release.

	* Makefile.am, Makefile.in: Remove windows-vc2005 from list for
	distribution.

2006-04-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/Makefile.am, test/Makefile.in: Only run CML tests if XML
	formats were compiled. (i.e., if libxml not available, can't test
	CML)
	
	* test/ringtest.sh, test/smartstest.sh, test/cmltest/test.sh:
	Minor shell script portability fixes.

2006-04-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/perl/META.yml, scripts/python/setup.py: Packaging
	changes for the scripting wrappers.
	