@@ -3,6 +3,10 @@
 	* src/dlhandler_unix.cpp (findFiles): Fix PR#1493706 problem with
 	misplaced NULL terminator.
 
+	* src/patty.cpp, src/typer.cpp, src/rotor.cpp, src/chains.cpp,
+	src/parsmart.cpp, src/data.cpp, src/atom.cpp: Updates to fix calls
+	to strcpy, replacing some static char* with std::string.
+
 2006-05-23  Craig James <cjames@emolecules.com>
 
 	* src/formats/smilesformat.cpp: Fixed a potential buffer overflow
